loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:7: error: not found: value cross
  while (cross==false){
         ^Poucet2:12: error: not found: value cross
    cross=crossing()
    ^